[package]
name = "p2pcontroller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
clap = { version = "3.1.5", features = ["derive"] }
futures = "0.3.21"
log = "0.4.14"
parking_lot = "0.12.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
strum = { version = "0.24.0", features = ["derive"] }
time = { version = "0.3.7", features = ["serde"] }
tokio = { version = "1.17.0", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "sync",
    "time",
    "fs",
] }
toml = "0.5.8"
